--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,6 +113,8 @@
     <string name="dialog_eta_layout_classic_btn">經典</string>
     <string name="dialog_eta_layout_cancel_btn">取消</string>
 
+    <string name="dialog_lang_title" translatable="false">@string/title_settings_language</string>
+
     <string name="add_card_route_text">尚德</string>
 
     <string name="demo_card_route_number">296A</string>
@@ -123,6 +125,7 @@
     <string name="demo_card_eta_minute_compact_2">13</string>
     <string name="demo_card_eta_minute_compact_3">23</string>
     <string name="demo_card_eta_minute_classic">3</string>
+    <string name="demo_card_eta_minute_classic_comma">,</string>
     <string name="demo_card_eta_minute_classic_unit">分</string>
     <string name="demo_card_eta_minute_classic_time">07:30</string>
     <string name="demo_card_eta_minute_na">-</string>
@@ -154,6 +157,8 @@
     <string name="eta_button_edit">編輯</string>
     <string name="eta_button_add">加入</string>
     <string name="eta_button_remove">從主頁移除</string>
+    <string name="eta_last_updated_at">班次時間已於 %d 秒前更新</string>
+    <string name="eta_last_updated_at_init">正在載入班次時間……</string>
 
     <string name="dialog_location_permission_title">注意</string>
     <string name="dialog_location_permission_message">需要定位權限才能繼續使用。</string>
